fix: apply Guardian compliance fixes (10 issues addressed)