@@ -29,7 +29,7 @@ public class OrderMapper {
 
         List<OrderItemEntity> itemEntities = order.getItems().stream()
             .map(item -> toItemEntity(item, entity))
-            .collect(Collectors.toList());
+            .toList();
         
         entity.setItems(itemEntities);
         return entity;
@@ -41,41 +41,16 @@ public class OrderMapper {
     public Order toDomain(OrderEntity entity) {
         List<OrderItem> items = entity.getItems().stream()
             .map(this::toDomainItem)
-            .collect(Collectors.toList());
+            .toList();
 
-        // Reconstruir la orden con todos sus atributos usando reflexión
-        return reconstructOrder(entity, items);
-    }
-
-    /**
-     * Reconstruye una orden desde la entidad JPA usando reflexión para establecer campos finales.
-     */
-    private Order reconstructOrder(OrderEntity entity, List<OrderItem> items) {
-        try {
-            // Crear una nueva instancia usando el constructor
-            Order order = new Order(entity.getCustomerId(), items);
-            
-            // Usar reflexión para establecer campos finales y estado
-            java.lang.reflect.Field idField = Order.class.getDeclaredField("id");
-            idField.setAccessible(true);
-            idField.set(order, entity.getId());
-            
-            java.lang.reflect.Field statusField = Order.class.getDeclaredField("status");
-            statusField.setAccessible(true);
-            statusField.set(order, toDomainStatus(entity.getStatus()));
-            
-            java.lang.reflect.Field createdAtField = Order.class.getDeclaredField("createdAt");
-            createdAtField.setAccessible(true);
-            createdAtField.set(order, entity.getCreatedAt());
-            
-            java.lang.reflect.Field updatedAtField = Order.class.getDeclaredField("updatedAt");
-            updatedAtField.setAccessible(true);
-            updatedAtField.set(order, entity.getUpdatedAt());
-            
-            return order;
-        } catch (Exception e) {
-            throw new RuntimeException("Error al reconstruir la orden desde la entidad JPA", e);
-        }
+        return new Order(
+            entity.getId(),
+            entity.getCustomerId(),
+            items,
+            toDomainStatus(entity.getStatus()),
+            entity.getCreatedAt(),
+            entity.getUpdatedAt()
+        );
     }
 
     private OrderItemEntity toItemEntity(OrderItem item, OrderEntity orderEntity) {
@@ -83,7 +58,7 @@ public class OrderMapper {
             orderEntity,
             item.getProductId(),
             item.getProductName(),
-            item.getUnitPrice().getValue(),
+            item.getUnitPrice().getValue().doubleValue(),
             item.getQuantity().getValue()
         );
     }
